--- a/км.html
+++ b/км.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="C:\Users\user\Documents\зв\km.css">
+    <link rel="stylesheet" href="km.css">
     <title>km</title>
     <style>
       *,
